# gazelle:prefix k8s.io/release

test_suite(
    name = "verify-all",
    tests = [
        "@io_k8s_repo_infra//hack:verify-bazel",
        "@io_k8s_repo_infra//hack:verify-boilerplate",
        "@io_k8s_repo_infra//hack:verify-deps",
        "@io_k8s_repo_infra//hack:verify-golangci-lint",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//build/debs:all-srcs",
        "//cmd/blocking-testgrid-tests:all-srcs",
        "//cmd/krel:all-srcs",
        "//cmd/release-notes:all-srcs",
        "//lib:all-srcs",
        "//pkg/command:all-srcs",
        "//pkg/git:all-srcs",
        "//pkg/notes:all-srcs",
        "//pkg/util:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
