# gazelle:prefix k8s.io/release

test_suite(
    name = "verify-all",
    tests = [
        "@io_k8s_repo_infra//hack:verify-bazel",
        "@io_k8s_repo_infra//hack:verify-boilerplate",
        "@io_k8s_repo_infra//hack:verify-deps",
        "@io_k8s_repo_infra//hack:verify-golangci-lint",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd/gcbuilder:all-srcs",
        "//cmd/gh2gcs:all-srcs",
        "//cmd/krel:all-srcs",
        "//cmd/kubepkg:all-srcs",
        "//cmd/release-notes:all-srcs",
        "//cmd/schedule-builder:all-srcs",
        "//images/build/go-runner:all-srcs",
        "//lib:all-srcs",
        "//packages/deb:all-srcs",
        "//pkg/announce:all-srcs",
        "//pkg/command:all-srcs",
        "//pkg/gcp:all-srcs",
        "//pkg/gh2gcs:all-srcs",
        "//pkg/git:all-srcs",
        "//pkg/github:all-srcs",
        "//pkg/http:all-srcs",
        "//pkg/kubepkg:all-srcs",
        "//pkg/log:all-srcs",
        "//pkg/mail:all-srcs",
        "//pkg/notes:all-srcs",
        "//pkg/release:all-srcs",
        "//pkg/testgrid:all-srcs",
        "//pkg/testing:all-srcs",
        "//pkg/util:all-srcs",
        "//pkg/version:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
