sh_test(
    name = "releaselib",
    srcs = ["releaselib_test.sh"],
)

sh_test(
    name = "gitlib",
    srcs = ["gitlib_test.sh"],
    args = ["$(location %s)" % "@jq//file:jq"],
    data = glob(["testdata/gitlib/*"]) + ["@jq//file:jq"],
)

sh_test(
    name = "common",
    srcs = ["common_test.sh"],
    data = glob(["testdata/common/**"]),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
