sh_test(
    name = "releaselib",
    srcs = ["releaselib_test.sh"],
)

sh_test(
    name = "gitlib",
    srcs = ["gitlib_test.sh"],
    data = glob(["testdata/gitlib/*"]),
)

sh_test(
    name = "common",
    srcs = ["common_test.sh"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
