load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd/gcbuilder/cmd:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/release/cmd/gcbuilder",
    visibility = ["//visibility:private"],
    deps = ["//cmd/gcbuilder/cmd:go_default_library"],
)

go_binary(
    name = "gcbuilder",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
