load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/release/cmd/release-notes",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/notes:go_default_library",
        "//vendor/github.com/go-kit/kit/log:go_default_library",
        "//vendor/github.com/go-kit/kit/log/level:go_default_library",
        "//vendor/github.com/google/go-github/github:go_default_library",
        "//vendor/github.com/kolide/kit/env:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
    ],
)

go_binary(
    name = "release-notes",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
