load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/release/cmd/release-notes",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/notes:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_google_go_github//github:go_default_library",
        "@com_github_kolide_kit//env:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_binary(
    name = "release-notes",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
