load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["git.go"],
    importpath = "k8s.io/release/pkg/git",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/command:go_default_library",
        "@com_github_blang_semver//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//config:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/object:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/transport:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/transport/ssh:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
