load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mail.go"],
    importpath = "k8s.io/release/pkg/mail",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sendgrid_rest//:go_default_library",
        "@com_github_sendgrid_sendgrid_go//:go_default_library",
        "@com_github_sendgrid_sendgrid_go//helpers/mail:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mail_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/mail/mailfakes:go_default_library",
        "//pkg/testing:go_default_library",
        "@com_github_sendgrid_rest//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/mail/mailfakes:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
