load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "document.go",
        "notes.go",
    ],
    importpath = "k8s.io/release/pkg/notes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/notes/internal:go_default_library",
        "@com_github_google_go_github_v28//github:go_default_library",
        "@com_github_nozzle_throttler//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "document_test.go",
        "notes_gatherer_test.go",
        "notes_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/notes/notesfakes:go_default_library",
        "@com_github_google_go_github_v28//github:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/notes/internal:all-srcs",
        "//pkg/notes/notesfakes:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
