load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "announce.go",
        "announce_templates.go",
    ],
    importpath = "k8s.io/release/pkg/patch",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "//pkg/patch/internal:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["announce_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/patch/internal/internalfakes:go_default_library",
        "//pkg/patch/internal/testing:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/patch/internal:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
