load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "github.go",
        "gitlib.go",
    ],
    importpath = "k8s.io/release/toolbox/util",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/google/go-github/github:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "common_test.go",
        "github_test.go",
        "gitlib_test.go",
    ],
    importpath = "k8s.io/release/toolbox/util",
    library = ":go_default_library",
)
