load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "k8s.io/release/cmd/gcbuilder/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gcp/build:go_default_library",
        "//pkg/log:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["root_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
