load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "changelog.go",
        "ff.go",
        "gcbmgr.go",
        "patch-announce.go",
        "push.go",
        "root.go",
        "version.go",
    ],
    importpath = "k8s.io/release/cmd/krel/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gcp/build:go_default_library",
        "//pkg/git:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/notes:go_default_library",
        "//pkg/notes/options:go_default_library",
        "//pkg/patch:go_default_library",
        "//pkg/release:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/version:go_default_library",
        "@com_github_blang_semver//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@in_gopkg_russross_blackfriday_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "changelog_test.go",
        "root_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
