load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "anago.go",
        "announce.go",
        "changelog.go",
        "ff.go",
        "gcbmgr.go",
        "gcbmgr_history.go",
        "push.go",
        "release_notes.go",
        "root.go",
        "version.go",
    ],
    importpath = "k8s.io/release/cmd/krel/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/command:go_default_library",
        "//pkg/gcp:go_default_library",
        "//pkg/gcp/auth:go_default_library",
        "//pkg/gcp/build:go_default_library",
        "//pkg/git:go_default_library",
        "//pkg/github:go_default_library",
        "//pkg/http:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/mail:go_default_library",
        "//pkg/notes:go_default_library",
        "//pkg/notes/document:go_default_library",
        "//pkg/notes/options:go_default_library",
        "//pkg/release:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/version:go_default_library",
        "@com_github_blang_semver//:go_default_library",
        "@com_github_olekukonko_tablewriter//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_yuin_goldmark//:go_default_library",
        "@com_github_yuin_goldmark//extension:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "changelog_data_test.go",
        "changelog_test.go",
        "ff_test.go",
        "gcbmgr_test.go",
        "root_test.go",
        "sut_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//cmd/krel/cmd/cmdfakes:go_default_library",
        "//pkg/command:go_default_library",
        "//pkg/gcp/build:go_default_library",
        "//pkg/git:go_default_library",
        "//pkg/notes/notesfakes:go_default_library",
        "//pkg/release:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//cmd/krel/cmd/cmdfakes:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
