load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fake_repository.go",
        "fake_worktree.go",
    ],
    importpath = "k8s.io/release/pkg/git/gitfakes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/git:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/object:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/storer:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
