load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fake_apiclient.go",
        "fake_send_client.go",
    ],
    importpath = "k8s.io/release/pkg/mail/mailfakes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/mail:go_default_library",
        "@com_github_sendgrid_rest//:go_default_library",
        "@com_github_sendgrid_sendgrid_go//helpers/mail:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
