load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fake_mo_diff.go"],
    importpath = "k8s.io/release/pkg/notes/notesfakes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/notes:go_default_library",
        "@com_github_saschagrunert_go_modiff//pkg/modiff:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
