load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "exec.go",
        "formatter.go",
        "mail_sender.go",
        "release_notes.go",
        "workspace.go",
    ],
    importpath = "k8s.io/release/pkg/patch/internal",
    visibility = ["//pkg/patch:__subpackages__"],
    deps = [
        "//pkg/log:go_default_library",
        "@com_github_sendgrid_rest//:go_default_library",
        "@com_github_sendgrid_sendgrid_go//:go_default_library",
        "@com_github_sendgrid_sendgrid_go//helpers/mail:go_default_library",
        "@io_k8s_utils//exec:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "formatter_test.go",
        "mail_sender_test.go",
        "release_notes_test.go",
        "workspace_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/github:go_default_library",
        "//pkg/patch/internal/internalfakes:go_default_library",
        "//pkg/patch/internal/testing:go_default_library",
        "@com_github_sendgrid_rest//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_utils//exec:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/patch/internal/internalfakes:all-srcs",
        "//pkg/patch/internal/testing:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
