load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fake_gcp_client.go",
        "fake_repository.go",
        "fake_version_client.go",
    ],
    importpath = "k8s.io/release/pkg/release/releasefakes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/git:go_default_library",
        "//pkg/release:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
